--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ project.version = "0.9.0"
 
 repositories {
     jcenter()
-	flatDir { dirs 'lib' }
+	flatDir { dirs project.getProjectDir().toString() + '/lib' }
 }
 
 dependencies 
@@ -28,8 +28,8 @@ dependencies
 		compile 'de.esoco:gewt:1.+'
 	}
 		
-	compile name: 'gwt-cal-0.9.4'		
-	compile name: 'gwt-dnd-3.3.4'		
+	compile 'com.allen-sauer.gwt.dnd:gwt-dnd:3.3.4'		
+	compile 'com.bradrydzewski:gwt-cal:0.9.4'		
     testCompile 'junit:junit:4.+'
 }
 
@@ -45,7 +45,7 @@ if (JavaVersion.current().isJava8Compatible()) {
 
 gwt {
     gwtVersion='2.7.0'
-    modules 'de.esoco.GEWTTimetable'
+    modules 'de.esoco.GewtTimetable'
 }
 
 jar { from sourceSets.main.allJava }
