--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 	flatDir { dirs project.getProjectDir().toString() + '/lib' }
 }
 
-dependencies 
+dependencies
 {
 	if (project(':gewt').getProjectDir().exists())
 	{
@@ -27,9 +27,9 @@ dependencies
 	{
 		compile 'de.esoco:gewt:1.+'
 	}
-		
-	compile 'com.allen-sauer.gwt.dnd:gwt-dnd:3.3.4'		
-	compile 'com.bradrydzewski:gwt-cal:0.9.4'		
+
+	compile 'com.allen-sauer.gwt.dnd:gwt-dnd:3.3.4'
+	compile 'com.bradrydzewski:gwt-cal:0.9.4'
     testCompile 'junit:junit:4.+'
 }
 
@@ -41,6 +41,10 @@ if (JavaVersion.current().isJava8Compatible()) {
         	options.addStringOption('Xdoclint:none', '-quiet')
 		}
 	}
+}
+
+eclipse {
+    pathVariables '': file(getProjectDir())
 }
 
 gwt {
