--- a/.classpath
+++ b/.classpath
@@ -6,13 +6,15 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="con" path="org.springsource.ide.eclipse.gradle.classpathcontainer"/>
+	<classpathentry kind="con" path="org.springsource.ide.eclipse.gradle.classpathcontainer" exported="true"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.allen-sauer.gwt.dnd/gwt-dnd/3.3.4/f9f6c7cb3ec96cc735aab4d49912d9a2d7fc2485/gwt-dnd-3.3.4.jar" sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.allen-sauer.gwt.dnd/gwt-dnd/3.3.4/f622fdc329f32ab9fcbee96a23ee195c028dabc/gwt-dnd-3.3.4-sources.jar"/>
-	<classpathentry kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-codeserver/2.7.0/74d5e4119d083f7ca97e3f01cbd666d025b314b3/gwt-codeserver-2.7.0.jar" sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-codeserver/2.7.0/657a855297f4e1e8f11c96983326a1fe23782f12/gwt-codeserver-2.7.0-sources.jar"/>
-	<classpathentry kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-servlet/2.7.0/6d5ed85568c13295374ba24194a987c0d952f3eb/gwt-servlet-2.7.0.jar" sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-servlet/2.7.0/2abdc607f5101c9f431f1e671ee30061d42b8906/gwt-servlet-2.7.0-sources.jar"/>
-	<classpathentry kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/junit/junit/4.12/2973d150c0dc1fefe998f834810d68f278ea58ec/junit-4.12.jar" sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/junit/junit/4.12/a6c32b40bf3d76eca54e3c601e5d1470c86fcdfa/junit-4.12-sources.jar"/>
-	<classpathentry kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/42a25dc3219429f0e5d060061f71acb49bf010a0/hamcrest-core-1.3.jar" sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/1dc37250fbc78e23a65a67fbbaf71d2e9cbc3c0b/hamcrest-core-1.3-sources.jar"/>
-	<classpathentry kind="lib" path="lib/gwt-cal-0.9.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="/gewt"/>
+	<classpathentry kind="src" path="/esoco-common"/>
+	<classpathentry sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.allen-sauer.gwt.dnd/gwt-dnd/3.3.4/f622fdc329f32ab9fcbee96a23ee195c028dabc/gwt-dnd-3.3.4-sources.jar" kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.allen-sauer.gwt.dnd/gwt-dnd/3.3.4/f9f6c7cb3ec96cc735aab4d49912d9a2d7fc2485/gwt-dnd-3.3.4.jar"/>
+	<classpathentry kind="lib" path="S:/eclipse/Lemarit/sdack-dependencies/gewt-timetable/lib/gwt-cal-0.9.4.jar"/>
+	<classpathentry sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-servlet/2.7.0/2abdc607f5101c9f431f1e671ee30061d42b8906/gwt-servlet-2.7.0-sources.jar" kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-servlet/2.7.0/6d5ed85568c13295374ba24194a987c0d952f3eb/gwt-servlet-2.7.0.jar"/>
+	<classpathentry sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/junit/junit/4.12/a6c32b40bf3d76eca54e3c601e5d1470c86fcdfa/junit-4.12-sources.jar" kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/junit/junit/4.12/2973d150c0dc1fefe998f834810d68f278ea58ec/junit-4.12.jar"/>
+	<classpathentry sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/1dc37250fbc78e23a65a67fbbaf71d2e9cbc3c0b/hamcrest-core-1.3-sources.jar" kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/42a25dc3219429f0e5d060061f71acb49bf010a0/hamcrest-core-1.3.jar"/>
+	<classpathentry sourcepath="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-codeserver/2.7.0/657a855297f4e1e8f11c96983326a1fe23782f12/gwt-codeserver-2.7.0-sources.jar" kind="var" path="GRADLE_USER_HOME/caches/modules-2/files-2.1/com.google.gwt/gwt-codeserver/2.7.0/74d5e4119d083f7ca97e3f01cbd666d025b314b3/gwt-codeserver-2.7.0.jar"/>
 </classpath>
