--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ language: java
 jdk:
   - oraclejdk8
 
+git:
+  depth: 3
+
 install:
   - pushd .. 
   - git clone -b ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} --depth 3 https://github.com/esoco/esoco-common
